# dearrayer

./: README.md  pyproject.toml
notebooks/: Example usage.ipynb
scripts/: Example usage.py
src/dearrayer/models/: tissue_microarray.py  tma_core.py  tma_grid.py
src/dearrayer/services/: __init__.py  grid_detecting_service.py
